--- a/custom.css
+++ b/custom.css
@@ -15,6 +15,7 @@ p {
 }
 .description {
   background-color: var(--main-color);
+  border-radius: 15px;
 }
 .ubication {
   background-color: var(--main-color);
